force-app/main/default/objects/DiscountItem__c/DiscountItem__c.object-meta.xml
<CustomObject>
    <label>Discount Item</label>
    <nameField>
        <displayFormat>DI-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Discount Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>