force-app/main/default/objects/DiscountItem__c/fields/Country_Price__c.field-meta.xml
<CustomField>
    <fullName>Country_Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used only at Membership Renewal process to define total renewal fee. Based on membership category and country of residence.</description>
    <label>Country Price</label>
    <referenceTo>Country_Price__c</referenceTo>
    <relationshipLabel>Renewal Discount Item</relationshipLabel>
    <relationshipName>Renewal_Discount_Item</relationshipName>
    <type>Lookup</type>
</CustomField>