force-app/main/default/objects/DiscountItem__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <referenceTo>Discount__c</referenceTo>
    <relationshipLabel>Discount Items</relationshipLabel>
    <relationshipName>Discount_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>