force-app/main/default/objects/DiscountItem__c/fields/Discount_Info__c.field-meta.xml
<CustomField>
    <fullName>Discount_Info__c</fullName>
    <formula>TEXT(Discount__r.Discount_Amount__c) + &apos; &apos; + TEXT(Discount__r.Discount_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Info</label>
    <type>Text</type>
</CustomField>