force-app/main/default/objects/DiscountItem__c/fields/DiscountPercent__c.field-meta.xml
<CustomField>
    <fullName>DiscountPercent__c</fullName>
    <formula>Discount__r.DiscountPercent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>