force-app/main/default/objects/DiscountItem__c/fields/Event_custom__c.field-meta.xml
<CustomField>
    <fullName>Event_custom__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event custom</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Discount Items</relationshipLabel>
    <relationshipName>Discount_Items</relationshipName>
    <type>Lookup</type>
</CustomField>