force-app/main/default/objects/DiscountItem__c/fields/Promo_Code__c.field-meta.xml
<CustomField>
    <fullName>Promo_Code__c</fullName>
    <formula>Discount__r.PromoCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Promo Code</label>
    <type>Text</type>
</CustomField>