force-app/main/default/objects/DiscountItem__c/fields/Session__c.field-meta.xml
<CustomField>
    <fullName>Session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session</label>
    <referenceTo>Session__c</referenceTo>
    <relationshipLabel>Discount Items</relationshipLabel>
    <relationshipName>Discount_Items</relationshipName>
    <type>Lookup</type>
</CustomField>