force-app/main/default/objects/DiscountItem__c/fields/Ticket__c.field-meta.xml
<CustomField>
    <fullName>Ticket__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ticket</label>
    <referenceTo>Ticket__c</referenceTo>
    <relationshipLabel>Discount Items</relationshipLabel>
    <relationshipName>Discount_Items</relationshipName>
    <type>Lookup</type>
</CustomField>