force-app/main/default/objects/DiscountItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Discount__c</columns>
    <columns>Promo_Code__c</columns>
    <columns>Discount_Info__c</columns>
    <columns>Event_custom__c</columns>
    <columns>Ticket__c</columns>
    <columns>Session__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>